--- a/index.html
+++ b/index.html
@@ -1,26 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Hotjar Tracking Code for my site -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3421342,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-F1WGM1SC5E"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-
-			gtag('config', 'G-F1WGM1SC5E');
-		</script>
 		<link rel="canonical" href="https://crickdle.com/">
 		<script type="application/ld+json">
 		{
@@ -578,11 +558,38 @@
       </div>
       </div>
 		<script>
+			function loadHotjar() {
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3421342,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+}
+
+function loadGoogleTagManager() {
+    var gtmScript = document.createElement('script');
+    gtmScript.async = true;
+    gtmScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-F1WGM1SC5E';
+    document.head.appendChild(gtmScript);
+
+    gtmScript.onload = function() {
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-F1WGM1SC5E');
+    };
+}
+			
 			function acceptCookies() {
 				document.cookie = "gaEnabled=true; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/";
 				document.cookie = "_hjOptOut=false; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/";
 				document.getElementById("cookieConsent").style.display = "none";
 				gtag('consent', 'update', {'analytics_storage': 'granted'});
+				loadHotjar();
+				loadGoogleTagManager();
 			}
 
 			function declineCookies() {
