--- a/index.html
+++ b/index.html
@@ -519,8 +519,13 @@
 												<button class="popup2-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup2-content">
-						<p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br><ul><li><span style="font-weight: 500">Mar 27, 2023</span></li><li>Crickdle #37</li></ul>Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
-					</div>
+  <p>Crickdle is a love letter to Test cricket. A new question is released at 9 a.m. UK time each day.<br>
+  <ul>
+    <li></li>
+    <li></li>
+  </ul>
+  Please send any enquiries to <span style="font-weight: 500">crickdle [at] gmail [dot] com</span></p>
+</div>
 				</div>
 			</div>
 		</header>
@@ -632,6 +637,15 @@ function loadGoogleTagManager() {
 				const today = new Date().toISOString().slice(0, 10);
 
 				if (isPast9amUKTime() && lastResetDate !== today) {
+					// Update the date and Crickdle number here
+    const dateElement = document.querySelector('.popup2-content ul li:first-child');
+    const crickdleNumber = 37 + Math.floor((new Date() - getUKTime(new Date(2023, 2, 27, 9))) / (24 * 60 * 60 * 1000));
+    dateElement.textContent = formatUKDate(new Date());
+    document.querySelector('.popup2-content ul li:last-child').textContent = `Crickdle #${crickdleNumber}`;
+
+    // Force a page reload
+					location.href = location.href;
+					
 					guessInputs.forEach((input, index) => {
 						localStorage.removeItem(`guess${index + 1}`);
 						localStorage.removeItem(`guess${index + 1}Color`);
